--- a/applications/A3_knowledge_graph/example/pyproject.toml
+++ b/applications/A3_knowledge_graph/example/pyproject.toml
@@ -9,4 +9,5 @@ dependencies = [
     "langchain-experimental>=0.4.1",
     "langchain-ollama>=1.0.1",
     "llmgraphtransformer>=0.0.2",
+    "pyvis>=0.3.2",
 ]
