--- a/applications/A6_knowledge_graph_pydantic/example/pyproject.toml
+++ b/applications/A6_knowledge_graph_pydantic/example/pyproject.toml
@@ -6,10 +6,12 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.14.3",
+    "jinja2>=3.1.6",
     "langchain>=1.2.10",
     "langchain-ollama>=1.0.1",
     "matplotlib>=3.10.8",
     "networkx>=3.6.1",
     "pydantic>=2.12.5",
+    "pyvis>=0.3.2",
     "requests>=2.32.5",
 ]
