--- a/applications/A11_bash_agent_ollama/bash_agent/pyproject.toml
+++ b/applications/A11_bash_agent_ollama/bash_agent/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "inquirer>=3.4.1",
     "langchain>=1.2.10",
     "langchain-community>=0.4.1",
     "langchain-experimental>=0.4.1",
